Finished initial layout CSS

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Website Developer Assignment</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,7 +30,7 @@
      <div class="navbar__link-toggle">
        <img src="img/icon_menu.png" alt="Menu" />
      </div>
-   <nav class="navbar__items">
+   <nav class="navbar__items" aria-label="Navigation for: Main categories">
      <ul>
      <li class="navbar__link navbar__item">
        <a href="#" class="navbar__icon navbar__icon--school">School</a>
@@ -49,7 +49,7 @@
     </li>
   </ul>
    </nav>
-   <nav class="navbar__items navbar__items--right">
+   <nav class="navbar__items navbar__items--right" aria-label="Navigation for: Sign up, log in and change language">
      <ul>
      <li class="navbar__link">
       <a href="#" class="button navbar__button--secondary">Sign up</a>
@@ -58,7 +58,7 @@
       <a href="#">Log in</a>
      </li>
      <li class="navbar__link">
-      <a href="#"><img src="img/icon_language.png" alt="Choose language" /><span class="display__hidden--md">Choose language</span></a>
+      <a href="#"><img src="img/icon_language.png" role="button" alt="Choose language" /><span class="display__hidden--md" aria-hidden="true">Choose language</span></a>
     </li>
   </ul>
    </nav>
@@ -69,8 +69,8 @@
       <h1>Make learning awesome</h1>
       <p>Kahoot! platform is an engaging tool for learning, training and business meetings. Create, host and share your Kahoots with students, co-workers or even with your friends and family.</p>
       <p>Kahoot! makes learning fun and awesome!</p>
-      <a class="button button--primary" href="">Sign up for free</a>
-      <a class="button button--secondary" href="">Create Kahoot!</a>
+      <a class="button button--primary" href="#">Sign up for free</a>
+      <a class="button button--secondary" href="#">Create Kahoot!</a>
     </div>
     </section>
   </main>
