--- a/index_bak.html
+++ b/index_bak.html
@@ -30,7 +30,7 @@
      <div class="navbar__link-toggle">
        <img src="img/icon_menu.png" alt="Menu" />
      </div>
-   <!-- <nav class="navbar__items" aria-label="Navigation for: Main categories">
+   <nav class="navbar__items" aria-label="Navigation for: Main categories">
      <ul>
      <li class="navbar__link navbar__item">
        <a href="#" class="navbar__icon navbar__icon--school">School</a>
@@ -61,37 +61,7 @@
       <a href="#"><img src="img/icon_language.png" role="button" alt="Choose language" /><span class="display__hidden--md" aria-hidden="true">Choose language</span></a>
     </li>
   </ul>
-   </nav> -->
-   <nav role="presentation" aria-label="Main Navigation" id="navbar__dropdown--container" class="navbar__items">
-    <ul>
-            <li class="has-submenu">
-                    <a class="navbar__icon navbar__icon--school" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">School</a>
-                    <ul>
-                            <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
-                            <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
-                    </ul>
-            </li>
-            <li><a class="navbar__icon navbar__icon--home" href="#navbar__dropdown--container">Home</a></li>
-            <li class="has-submenu">
-                <a class="navbar__icon navbar__icon--work" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">Work</a>
-                <ul>
-                        <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
-                        <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
-                </ul>
-        </li>
-        <li><a class="navbar__icon navbar__icon--academy" href="#navbar__dropdown--container">Academy</a></li>
-        <li><a class="navbar__icon navbar__icon--pricing" href="#navbar__dropdown--container">Pricing</a></li>
-        <li><a class="navbar__button--secondary" href="#navbar__dropdown--container">Sign&nbsp;up</a></li>
-        <li><a class="navbar__icon navbar__icon--none" href="#navbar__dropdown--container">Log in</a></li>
-        <li class="has-submenu">
-          <a class="navbar__icon navbar__icon--none" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true"><img src="img/icon_language.png" role="button" alt="Choose language" /><span class="display__hidden--md" aria-hidden="true">Choose language</span></a>
-          <ul>
-                  <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
-                  <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
-          </ul>
-  </li>
-    </ul>
-</nav>
+   </nav>
   </section>
   <main>
     <section class="hero hero__background--playing">
