--- a/index.html
+++ b/index.html
@@ -1,78 +1,65 @@
 <!doctype html>
 <html class="no-js" lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Website Developer Assignment</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-  <section class="navbar">
-    <div class="navbar__link--logo">
-      <a href="#"><img src="img/logo_kahoot.png" alt="Kahoot logo" /></a>
-     </div>
-     <div class="navbar__link-toggle">
-       <img src="img/icon_menu.png" alt="Menu" />
-     </div>
-   <nav role="presentation" aria-label="Main Navigation" id="navbar__dropdown--container" class="navbar__items">
-    <ul>
-            <li class="has-submenu">
-                    <a class="navbar__icon navbar__icon--school" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">School</a>
-                    <ul>
+    <head>
+        <meta charset="utf-8">
+        <title>Website Developer Assignment</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="">
+        <meta property="og:type" content="">
+        <meta property="og:url" content="">
+        <meta property="og:image" content="">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="apple-touch-icon" href="icon.png">
+        <!-- Place favicon.ico in the root directory -->
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <meta name="theme-color" content="#fafafa">
+    </head>
+    <body>
+        <header class="navbar">
+            <div class="navbar__link--logo">
+                <a href="#"><img src="img/logo_kahoot.png" alt="Kahoot logo" /></a>
+            </div>
+            <div class="navbar__link-toggle">
+                <img src="img/icon_menu.png" alt="Menu" />
+            </div>
+            <nav aria-label="Main Navigation" id="navbar__dropdown--container" class="navbar__items">
+                <ul>
+                    <li class="has-submenu">
+                        <a class="navbar__icon navbar__icon--school" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">School</a>
+                        <ul>
                             <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
                             <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
-                    </ul>
-            </li>
-            <li><a class="navbar__icon navbar__icon--home" href="#navbar__dropdown--container">Home</a></li>
-            <li class="has-submenu">
-                <a class="navbar__icon navbar__icon--work" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">Work</a>
-                <ul>
-                        <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
-                        <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="navbar__icon navbar__icon--home" href="#navbar__dropdown--container">Home</a></li>
+                    <li class="has-submenu">
+                        <a class="navbar__icon navbar__icon--work" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true">Work</a>
+                        <ul>
+                            <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
+                            <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
+                        </ul>
+                    </li>
+                    <li><a class="navbar__icon navbar__icon--academy" href="#navbar__dropdown--container">Academy</a></li>
+                    <li><a class="navbar__icon navbar__icon--pricing" href="#navbar__dropdown--container">Pricing</a></li>
+                    <li class="navbar__push navbar__push--start"><a class="navbar__button--secondary" href="#navbar__dropdown--container">Sign&nbsp;up</a></li>
+                    <li class="navbar__push"><a class="navbar__icon navbar__icon--none" href="#navbar__dropdown--container">Log in</a></li>
+                    <li class="navbar__push navbar__push--icon"><a class="navbar__icon navbar__icon--only" href="#navbar__dropdown--container"><img src="img/icon_language.png" alt="Choose language" class="display__hidden--sm" /><span class="display__hidden--md" aria-hidden="true">Choose language</span></a></li>
                 </ul>
-        </li>
-        <li><a class="navbar__icon navbar__icon--academy" href="#navbar__dropdown--container">Academy</a></li>
-        <li><a class="navbar__icon navbar__icon--pricing" href="#navbar__dropdown--container">Pricing</a></li>
-        <li class="navbar__push navbar__push--start"><a class="navbar__button--secondary" href="#navbar__dropdown--container">Sign&nbsp;up</a></li>
-        <li class="navbar__push"><a class="navbar__icon navbar__icon--none" href="#navbar__dropdown--container">Log in</a></li>
-        <li class="has-submenu navbar__push">
-          <a class="navbar__icon navbar__icon--none" href="#navbar__dropdown--container" aria-expanded="false" aria-haspopup="true"><img src="img/icon_language.png" role="button" alt="Choose language" /><span class="display__hidden--md" aria-hidden="true">Choose language</span></a>
-          <ul>
-                  <li><a href="#navbar__dropdown--container">Subnav item 1</a></li>
-                  <li><a href="#navbar__dropdown--container">Subnav item 2</a></li>
-          </ul>
-  </li>
-    </ul>
-</nav>
-  </section>
-  <main>
-    <section class="hero hero__background--playing">
-      <div class="hero__text hero__text--left">
-      <h1>Make learning awesome</h1>
-      <p>Kahoot! platform is an engaging tool for learning, training and business meetings. Create, host and share your Kahoots with students, co-workers or even with your friends and family.</p>
-      <p>Kahoot! makes learning fun and awesome!</p>
-      <a class="button button--primary" href="#">Sign up for free</a>
-      <a class="button button--secondary" href="#">Create Kahoot!</a>
-    </div>
-    </section>
-  </main>
-  <script src="js/main.js"></script>
-</body>
-
+            </nav>
+          </header>
+        <main>
+            <section class="hero hero__background--playing">
+                <div class="hero__text hero__text--left">
+                    <h1>Make learning awesome</h1>
+                    <p>Kahoot! platform is an engaging tool for learning, training and business meetings. Create, host and share your Kahoots with students, co-workers or even with your friends and family.</p>
+                    <p>Kahoot! makes learning fun and awesome!</p>
+                    <a class="button button--primary" href="#">Sign up for free</a>
+                    <a class="button button--secondary" href="#">Create Kahoot!</a>
+                </div>
+            </section>
+        </main>
+        <script src="js/main.js"></script>
+    </body>
 </html>
